--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 .search {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin-top: -5%;
-    font-family: Arial, sans-serif;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+  font-family: Arial, sans-serif;
+  background-image: url("images/Screen1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
   .container {
     text-align: center;
+    margin-top: -10%;
   }
   
   .note {
@@ -17,7 +21,7 @@
     color:#c0c0c0;
   }
   .Title{
-    font-size: 55px;
+    font-size: 70px;
     font-weight: bold;
     color:#575f78;
   }
@@ -42,7 +46,7 @@
     font-size: 15px;
     margin-left: -47%;
     height: 40px;
-    width: 140%;
+    width: 145%;
     background-color: #eee9e9;
     color: #c9c5c5;
     background-image: url('images/search-icon.png'); 
@@ -76,11 +80,13 @@
   .tb-body {
     margin: 0;
     padding: 0;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     align-items: center;
     background-color: white;
     margin-top: 5%;
+    margin-left: 15%;
+    margin-right: 15%;
     font-family: Arial, sans-serif;
   }
   
@@ -88,7 +94,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70%;
+    width: 100%;
+    margin-bottom: 5%;
   }
   
   table {
@@ -202,6 +209,19 @@
     font-weight: bold;
     left: 15px; 
     color:#f70909;
+  }
+
+  .black-rounded-div {
+    width: 100%;
+    height: 50px;
+    border-radius: 15px;
+    margin-bottom: 5%;
+    padding-top: 20px;
+    padding-left: 20px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: black;
   }
   
   
