--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   align-items: center;
   height: 100vh;
   font-family: Arial, sans-serif;
-  background-image: url("images/search-screen-bg.png");
+  background-image: url("images/bg-search-image.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
