--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   height: 100vh;
   font-family: Arial, sans-serif;
   background-image: url("images/bg-search-image.png");
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-color: rgba(0, 0, 0, 0);
