--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* height: 100vh; */
+  height: 100vh;
   font-family: Arial, sans-serif;
   background-image: url("images/bg-search-image.png");
   background-size: contain;
