--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
   .title-class{
     font-size: 35px;
     font-weight: 700;
-    /* height:160px; */
+    height:160px;
     color:#66758B;
   }
   
