--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 .body {
+  margin:0;
+  padding:0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,7 +11,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #F8F9FD;
 }
 
   .container {
@@ -74,6 +76,7 @@
   .search-button:hover {
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2); 
   }
+
 
   .tb-body {
     margin: 0;
