--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   height: 100vh;
   font-family: Arial, sans-serif;
   background-image: url("images/bg-search-image.png");
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-color: #F8F9FD;
