--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@
   align-items: center;
   height: 100vh;
   font-family: Arial, sans-serif;
-  background-image: url("images/bg-search-image.png");
+  background-image: url("images/Screen1.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #F8F9FD;
+  background-color: #F3F3FB;
 }
 
   .container {
     text-align: center;
+    /* margin-top:-10%; */
   }
   
   .note-class {
