--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   align-items: center;
   height: 100vh;
   font-family: Arial, sans-serif;
-  background-image: url("images/Screen1.png");
+  background-image: url("images/Screen1new.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
