--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   height: 100vh;
   font-family: Arial, sans-serif;
   background-image: url("images/Screen1.png");
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-color: #F3F3FB;
@@ -16,7 +16,7 @@
 
   .container {
     text-align: center;
-    /* margin-top:-10%; */
+    margin-top:-10%;
   }
   
   .note-class {
